--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,17 @@
 @import "tailwindcss";
 
+
+
 @font-face {
-  font-family: "pricedown";
-  src: url("./pricedown.otf");
+  font-family: "PlayReg";
+  src: url("./Playwrite-Regular.ttf");
 }
+
+@font-face {
+  font-family: "SilkBold";
+  src: url("./Silkscreen-Bold.ttf");
+}
+
 
 
 
