--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,25 @@
 @import "tailwindcss";
 
 
-
 @font-face {
   font-family: "PlayReg";
-  src: url("./Playwrite-Regular.ttf");
+  src: url("/fonts/Playwrite-Regular.ttf") format("truetype");
+  font-display: swap;
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
   font-family: "SilkBold";
-  src: url("./Silkscreen-Bold.ttf");
+  src: url("/fonts/Silkscreen-Bold.ttf") format("truetype");
+  font-display: swap;
+  font-weight: bold;
+  font-style: normal;
 }
-
-
-
 
 html,
 body {
   width: 100%;
   height: 100%;
-  font-family: "pricedown";
 }
+
