--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
 
-
 @font-face {
   font-family: "PlayReg";
   src: url("/fonts/Playwrite-Regular.ttf") format("truetype");
@@ -21,5 +20,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
